<resources>
    <string name="app_name">Zero</string>
    <string name="intro_title"> Welcome to <font color='#39c7a5'>Digital Store</font>\n a<font color='#39c7a5'> Gateway </font>to the Latest Tech</string>
    <string name="intro_sub_title">Sign in to explore a wide range of cutting-edge\ndigital products. Don\'t have an account yet?\nRegister now and enjoy a seamless\nand secure shopping experience</string>
    <string name="start_btn">Let\'s Get Started</string>
    <string name="sign_in">Already have an account? <font color='#39c7a5'>Sign in</font></string>
    <string name="welcome_back">Welcome Back</string>
    <string name="name">Mohamed</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="recommendation">Recommendation</string>
    <string name="explorer">Explorer</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Order</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="rate">5</string>
    <string name="dollar_sign">$-</string>
    <string name="title">title</string>
    <string name="buy_now">Buy Now</string>
    <string name="payment_method">Payment Method</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="cash">Cash</string>
    <string name="pay_cash">Pay Cash When the medicines\n at the destination</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="login">Login to your online account payment</string>
    <string name="check_out">Check Out</string>
</resources>