<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Splash"
            android:scaleType="centerCrop"
            android:src="@drawable/intro_pic"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_sub_title"
                android:textAlignment="center"
                android:textColor="@color/darkGrey"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startBtn"
                android:layout_margin="30dp"
                android:background="@drawable/green_button_bg"
                android:textColor="@color/white"
                android:textSize="18sp"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_btn"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>